<resources>
    <string name="app_name">Santa\'s List</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="search_heading">Name of person to search:</string>
    <string name="edit">Edit</string>
    <string name="edit_heading">ID of person to edit:</string>
    <string name="id">ID</string>
    <string name="delete">Delete</string>
    <string name="delete_heading">ID of person to delete:</string>
    <string name="firstnamehint">First Name</string>
    <string name="lastnamehint">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="birthdate">Birth Date:</string>
    <string name="street">Street:</string>
    <string name="city">City:</string>
    <string name="province">Province:</string>
    <string name="postalcode">Postal Code:</string>
    <string name="country">Country:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="isnaughty">Is Naughty:</string>
</resources>
